# Atoms

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  VERSION  build.sh  build_prod.sh  meson.build  pm.mirko.Atoms.prod.yml  pm.mirko.Atoms.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  general-feedback.md
atoms/: atoms  atoms.gresource.xml  atoms.in  const.py  main.py  meson.build
atoms-cli/: setup.py
atoms-cli/atoms_cli/: setup.cfg
atoms/backend/: atoms.py  meson.build
atoms/backend/entities/: atom.py  config.py  distribution.py  image.py  instance.py  meson.build
atoms/backend/entities/distributions/: alpinelinux.py  archlinux.py  debian.py  fedora.py  meson.build  ubuntu.py  unknown.py
atoms/backend/exceptions/: atom.py  common.py  config.py  distribution.py  download.py  exception.py  image.py  meson.build
atoms/backend/models/: distribution.py  meson.build  result.py
atoms/backend/models/distributions/: __init__.py  alpinelinux.py  debian.py  fedora.py  meson.build  ubuntu.py
atoms/backend/params/: meson.build  paths.py
atoms/backend/utils/: distribution.py  download.py  file.py  hash.py  image.py  meson.build  paths.py
atoms/backend/wrappers/: client_bridge.py  launcher.sh  meson.build  podman.py  proot.py
atoms/frontend/: const.py  main.py  meson.build
atoms/frontend/devel/: const.py
atoms/frontend/utils/: client_bridge.py  gtk.py  meson.build  threading.py
atoms/frontend/views/: console.py  dashboard.py  detached_window.py  meson.build  window.py
atoms/frontend/views/lists/: atoms.py  meson.build
atoms/frontend/views/status/: detached_console.py  meson.build  no_atoms.py
atoms/frontend/widgets/: atom_entry.py  creation_step_entry.py  image_entry.py  meson.build
atoms/frontend/windows/: detached_window.py  main_window.py  meson.build  new_atom_window.py  preferences_window.py
atoms/gtk/: about-window.ui  dashboard.ui  detached-window.ui  entry-atom.ui  entry-creation-step.ui  entry-image.ui  help-overlay.ui  list-atoms.ui  new-atom-window.ui  preferences-window.ui  status-detached-console.ui  status-no-atoms.ui  window.ui
atoms/utils/: file_chooser.py  gtk.py  meson.build  translations.py
atoms/views/: console.py  dashboard.py  meson.build
atoms/views/lists/: atoms.py  meson.build
atoms/views/status/: meson.build  no_atoms.py
atoms/widgets/: atom_entry.py  creation_step_entry.py  image_entry.py  meson.build
atoms/windows/: main_window.py  meson.build  new_atom_window.py  preferences_window.py
data/: meson.build  pm.mirko.Atoms.appdata.xml.in  pm.mirko.Atoms.desktop.in  pm.mirko.Atoms.gschema.xml
data/icons/: meson.build
po/: LINGUAS  POTFILES  atoms.pot  de.po  en_US.po  fr.po  it_IT.po  meson.build  nl.po  pt_BR.po  ta.mo  ta.po  zh_CN.po
