[metadata]
name = Atoms CLI
version = 0.1
author = Mirko Brombin
author_email = send@mirko.pm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AtomsDevs/atoms-cli
project_urls =
    Bug Tracker = https://github.com/AtomsDevs/atoms-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0-only
    Operating System :: POSIX :: Linux
[options]
python_requires = >=3.9